--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
+spring.profiles.active=dev
+
+# Logging configuration
+logging.level.org.springframework=INFO
+logging.level.teksystems.casestudy=DEBUG
+spring.output.ansi.enabled=ALWAYS
