--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.profiles.active=dev
 logging.level.org.springframework=INFO
 logging.level.teksystems.casestudy=DEBUG
 spring.output.ansi.enabled=ALWAYS
+
+# File upload
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=$(java.io.tmpdir)
